@@ -1,3 +1,10 @@
+2011-11-14  Maciej W. Rozycki  <macro@codesourcery.com>
+
+	Apply mainline patches
+	2011-11-14  Maciej W. Rozycki  <macro@codesourcery.com>
+	* config/tc-mips.c (can_swap_branch_p): Exclude microMIPS
+	variant frags too.
+
 2011-11-07  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
 
 	Apply mainline patches
